完成新建页面搭建
包括布局, 网路请求, 数据处理, 交互逻辑处理, 页面传值处理

--- a/app.json
+++ b/app.json
@@ -4,7 +4,9 @@
         "pages/message/message",
         "pages/public/public",
         "pages/zone/zone",
-        "pages/logs/logs"
+        "pages/logs/logs",
+
+        "pages/createReCheck/createReCheck"
     ],
     "window": {
         "backgroundTextStyle": "light",
