--- a/app.json
+++ b/app.json
@@ -11,7 +11,7 @@
     "window": {
         "backgroundTextStyle": "light",
         "navigationBarBackgroundColor": "#fff",
-        "navigationBarTitleText": "WeChat",
+        "navigationBarTitleText": "好大夫在线",
         "navigationBarTextStyle": "black"
     },
     "sitemapLocation": "sitemap.json",
